perf(jvm): enable generational ZGC on JDK 21